--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <input class="Menu" type="button" value="Menu" >
         <input class="Info" type="button" value="Info">
         <input class="Booking" type="button" value="Booking">
-         <button class="social-btn1" ><img src="Vector-1.png"></button>
-         <button class="social-btn2" ><img src="IME.png"></button>
-         <button class="social-btn3" ><img src="Vector.png"></button>
+         <button class="social-btn1" ><img src="img\Vector-1.png"></button>
+         <button class="social-btn2" ><img src="img\IME.png"></button>
+         <button class="social-btn3" ><img src="img\Vector.png"></button>
     </div>
     <div class="bg-body">
-        <img src="IMAGE.jpg" class="bg-img">
+        <img src="img\IMAGE.jpg" class="bg-img">
     </div>
     <h6 class="bg2-h6">About Us</h6>
     <div class="bg2">
@@ -28,7 +28,7 @@
     </div>
 <div class="bg-body2">
       <h6 class="men">Menu</h6>
-      <img class="Men1" src="IMAGE-1.jpg">
+      <img class="Men1" src="img\IMAGE-1.jpg">
       <p class="mn-content">We change our menu every season. Here is what we are currently dishing up.</p>
       <input class="Food-Menu" type="button" value="Food Menu">
       <input class="Drinks-Menu" type="button" value="Drinks Menu">
@@ -45,7 +45,7 @@
     <p class="bf4">We are closed on Mondays to reflect and refuel</p>
 </div>
 <div class="foot1">
-    <img src="IMAGE-4.jpg" class="fooo1">
+    <img src="img\IMAGE-4.jpg" class="fooo1">
 </div>
 <div class="foot2">
     <h1>Award winning cafe and bar.</h1>
@@ -77,3 +77,4 @@
 
 </body>
 </html>
+
